# serverless-web-server

./: .gitignore  CROSS_COMPILATION_SETUP.md  Cargo.toml  Dockerfile.build  Makefile  README.md  SCRIPT_REFERENCE.md  TESTING_SUMMARY.md  demo_enhanced_logging.sh  test_enhanced_logging.sh  test_html.sh  test_lambda_output.sh
.cargo/: config.toml
.kiro/specs/docker-build-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/static-web-lambda/: design.md  requirements.md  tasks.md
docs/: DEPLOYMENT.md
proptest-regressions/tests/: property_tests.txt
scripts/: build-deploy.sh  build-lambda.sh  package-lambda.sh
src/: handler.rs  index.html  lib.rs  main.rs  response.rs  security.rs
src/tests/: enhanced_logging_tests.rs  integration_tests.rs  mod.rs  property_tests.rs  unit_tests.rs
terraform/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  outputs.tf  variables.tf
